# japan

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  GNUmakefile  INSTALL  PackageInfo.dox  README.md  SetLargePositive_A_q  feedback_ana  qweak-config.in  setup_japan.tcsh
Feedback/: CMakeLists.txt  FlipPCValues  GetGoodPC  Makefile  SetLargeNegative_A_q  SetNominalPC
Feedback/include/: GMSock.h  GreenMonster.h  GreenSock.h  QwEPICSControl.h  QwHelicityCorrelatedFeedback.h  cfSockCli.h  cfSock_types.h
Feedback/main/: QwFeedback.cc
Feedback/prminput/: detectors.map  parity_hist.in  prexinj_beamline_eventcuts_FB.map  prexinj_detectors_FB.map  qweak_beamline_eventcuts.in  qweak_beamline_geometry.map  qweak_fb_prm.in  qweak_hallc_beamline.map  qweak_hallc_pedestal.map  qweak_helicity.map  qweak_lumi.map  qweak_lumi_eventcuts.in  qweak_lumi_pedestal.map  qwfeedback.conf  qwfeedback.conf-PREXII  qwfeedback_offline.conf
Feedback/src/: GreenMonster.cc  QwEPICSControl.cc  QwHelicityCorrelatedFeedback.cc  cfSockCli.c  cfSockCli.cc
evio/: CMakeLists.txt  Makefile  README
evio/include/: THaCodaData.h  THaCodaDataLinkDef.h  THaCodaFile.h  THaCodaFileLinkDef.h  THaEtClient.h  THaEtClientLinkDef.h  evio.h
evio/src/: THaCodaData.C  THaCodaFile.C  THaEtClient.C  etHeartbeat_main.C  etclient_main.C  etclient_main_nonptr.C  etclient_main_ptr.C  evio.C  swap_util.C  tstcoda_main.C  tstcoda_main_brief.C  tstio_main.C
panguin/: CMakeLists.txt  README.md  panguin.cc
panguin/include/: panguinOnline.hh  panguinOnlineConfig.hh  panguinOnlineLinkDef.h
panguin/macros/: BCM_DD_check.cfg  BCM_DD_check1.cfg  BCMchecks.cfg  BatteryNoise.cfg  FFBhunt_online.cfg  FFBhunt_online_OPS.cfg  FFBhunt_online_OPS_png.cfg  GetBCMResolution.C  GetPedestals.cfg  GetPedestals_online.cfg  GetPedestals_run2770.cfg  GetStats.C  GetStatsManually.C  HallBPMsdiffs_Caryn.cfg  HallBPMsdiffs_online_Caryn.cfg  InjBPMStatus.C  Integrated.C  Makefile  PITAscan.cfg  PITAscan_online.cfg  PlotBCMs.C  PlotBPMs.C  PlotInjBPMS_FC2_OPS.C  PlotInjBPMS_FC2_OPS_5min.C  PlotInjBPMS_OPS.C  PlotInjBPMSwidths_OPS.C  PlotSAMs.C  RHWPscan.cfg  RHWPscan_online.cfg  SAMsCircle.C  SyncCheck.C  SyncCheckManually.C  WatchInj.cfg  asymmetryPlot.C  asymmetryPlot_compile.C  asymmetryPlot_diffs.C  asymmetryPlot_example.C  asymmetryPlot_modular.C  asymmetryPlot_vector.C  asymmetryPlot_wrapper.C  (+63 more)
panguin/macros/BeamMod/: BeamModCycle.C  BeamModPlot.C  input_max_panguin.txt  input_panguin.txt  input_panguin_1X.txt  max_input.txt  monitor_raw_bmod.cfg  monitor_raw_bmod_prompt.cfg  onlineBmodAna.sh  onlineBmodAna_1X.sh  onlineRunAvgBmodAna.sh  onlineRunAvgBmodAna_1X.sh  plotAD.C  plotAD_1357642.C  plotAD_1X.C  realtimeBmodAna.C
panguin/macros/PITAscanmacros/: #PITAscan.C#  PITAscan.C
panguin/macros/PedestalRunScripts/: #GetHallBPMPedestal_panguin_Caryn.C#  GetBCMPedestal_injector_panguin_Caryn.C  GetBPMPedestal_injector_panguin_Caryn.C  GetHallBCM10XPedestal_panguin_Caryn.C  GetHallBCMPedestal_panguin_Caryn.C  GetHallBCMPedestal_panguin_Caryn_old.C  GetHallBPMPedestal_panguin_Caryn.C  GetHallCav4BPedestal_panguin_Caryn.C  GetHallCav4CPedestal_panguin_Caryn.C  GetHallCav4DPedestal_panguin_Caryn.C  GetMainDetPedestalL_panguin_Caryn.C  GetMainDetPedestalR_panguin_Caryn.C  GetSAMPedestal1537_panguin_Caryn.C  GetSAMPedestal2648_panguin_Caryn.C
panguin/macros/PlotBPMSmacros/: PlotHallBPMS.C  PlotHallBPMSprojected.C  PlotHallBPMSshort.C  PlotInjBPMS.C  PlotInjBPMS_FC1.C  PlotInjBPMS_FC2.C
panguin/macros/PlotsBCMmacros/: BCM_split_event_panguin.C  BCM_split_yield_panguin.C  BCM_split_yield_panguin2.C  BCM_split_yield_panguin3.C  BCM_split_yield_panguin4.C  monitor_bcm_pedestals.cfg  monitor_bcm_pedestals_all.cfg  plotCorr.C  plotCorr_Catherine.C
panguin/macros/QualityAssurance/: CalculateQuality.C  GetCountCutStats.C  GetCutStats.C  testChannels.cfg
panguin/macros/RHWPscanmacros/: RHWP_scan.C
panguin/macros/TimingDAQ/: Timing_DAQ.cfg
panguin/macros/detectors/: DET_noise.C
panguin/src/: panguinOnline.cc  panguinOnlineConfig.cc
rootScripts/aggregator/: CMakeLists.txt  README.md  anaInt.cfg  analyze.cfg  camAna.hh  camDataFrame.C  camDataFrame.hh  camHist.hh  camIO.hh  camIO_v2.hh  camMatrix.hh  camguin.C  camguin.hh  camguin_compile.C  camguin_v2.C  dataFrame_test.C  do1.sh  do_bcm_1.sh  input.txt  postPan.cfg  setup_camguin.sh  setup_camguin.tcsh  setup_camguin_dithering.sh  test.C  wrapper.sh
rootScripts/aggregator/bmodagg/: README.md  bmodagg.py
rootScripts/aggregator/collector-drawPostpan/: README.md  drawPostPan.C  list.txt
rootScripts/aggregator/drawPostpan/: PQB_accumulate_mini_aggFiles_list.sh  PQB_slug_file_accumulate_list.sh  README.md  accumulate_aggFiles_list.sh  accumulate_mini_aggFiles_list.sh  copytree.C  copytree_auto.C  copytree_cameron.C  dithering_accumulate_mini_aggFiles_list.sh  dithering_slug_file_accumulate_list.sh  drawPostPan.C  grandAgg.C  grandAgg.h  plotAgg.C  plotAgg.h  publish_slug.sh  slug_file_accumulate_list.sh
rootScripts/aggregator/regout/: .extractCor.C.swp  .loop.py.swp  .miniagg.C.swo  draw_miniagg.C  draw_miniagg.h  input.txt  loop.py  miniagg.C  miniagg.h  setup_env.csh  setup_japan.tcsh  test_miniagg.C  test_miniagg.h
rootScripts/aggregator/regressor/: camReg.hh  camRegDipole.hh  regressionInput.txt  regressionInputDipole.txt
rootScripts/aggregator/twoDagg/: .nfs00000000006367c0000000b6  twoDagg.C  twoDinput.txt  twoDwrapper.sh
rootScripts/aggregator/wrapper/: .rootrc  AT_input.txt  PQB_input.txt  SAMs_input.txt  addUnits.C  any-loop-oneRun.py  at-input.txt  burp_input.txt  dithering_1X_input.txt  dithering_input.5337-6490.txt  dithering_input.txt  dithering_input_PREX.txt  getNMiniruns.C  getNMiniruns_japan.C  getNMiniruns_postpan.C  ideal_inj_spin_info.txt  input.5337-6490.txt  input.txt  input_CREX_respin1-firstTry.txt  input_CREX_respin1.txt  input_CREX_respin1_all.txt  input_Pedestals.txt  (+21 more)
rootScripts/aggregator/wrapper-dithering/: addUnits.C  agg_prompt_list_dithering.sh  aggregator_list_dithering.sh  loop-dither.py  loop-oneRun-dither.py  wrapper_dithering.sh
(+2374 files in other folders)
